--- a/README
+++ b/README
@@ -2,8 +2,8 @@ World Bank Development Data SOM
 
 Commiters in the project:
 
-    Dani Arribas-bel <darribas@asu.edu>
-    Nick Malizia <nmalizia@asu.edu>
+    * Dani Arribas-bel <darribas@asu.edu>
+    * Nick Malizia <nmalizia@asu.edu>
 
 NOTE: if you want to get involved in this project, talk to any of the
 commiters
